Fix: insert image dialog too narrow

--- a/packages/app-components/src/Dialog.module.css
+++ b/packages/app-components/src/Dialog.module.css
@@ -1,4 +1,5 @@
 .cmp-dialog {
+
   .cmp-dialog__overlay {
     background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
@@ -15,6 +16,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 90vw;
+    min-width: 40vw;
     /*width: 500px;*/
     max-height: 85vh;
     padding: 25px;
